; ModuleID = '/home/carl/AnghaBench/jq/src/extr_compile.c_make_env.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_compile.c_make_env.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@environ = common dso_local global i8** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @make_env to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @make_env(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i64 @jv_is_valid(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @jv_copy(i32 %11)
  store i32 %12, i32* %2, align 4
  br label %68

13:                                               ; preds = %1
  %14 = call i32 (...) @jv_object()
  store i32 %14, i32* %4, align 4
  %15 = load i8**, i8*** @environ, align 8
  %16 = icmp eq i8** %15, null
  br i1 %16, label %17, label %19

17:                                               ; preds = %13
  %18 = load i32, i32* %4, align 4
  store i32 %18, i32* %2, align 4
  br label %68

19:                                               ; preds = %13
  store i64 0, i64* %5, align 8
  br label %20

20:                                               ; preds = %62, %19
  %21 = load i8**, i8*** @environ, align 8
  %22 = load i64, i64* %5, align 8
  %23 = getelementptr inbounds i8*, i8** %21, i64 %22
  %24 = load i8*, i8** %23, align 8
  %25 = icmp ne i8* %24, null
  br i1 %25, label %26, label %65

26:                                               ; preds = %20
  %27 = load i8**, i8*** @environ, align 8
  %28 = load i64, i64* %5, align 8
  %29 = getelementptr inbounds i8*, i8** %27, i64 %28
  %30 = load i8*, i8** %29, align 8
  %31 = call i8* @strchr(i8* %30, i8 signext 61)
  store i8* %31, i8** %6, align 8
  %32 = icmp eq i8* %31, null
  br i1 %32, label %33, label %41

33:                                               ; preds = %26
  %34 = load i32, i32* %4, align 4
  %35 = load i8**, i8*** @environ, align 8
  %36 = load i64, i64* %5, align 8
  %37 = getelementptr inbounds i8*, i8** %35, i64 %36
  %38 = load i8*, i8** %37, align 8
  %39 = call i32 @jv_string(i8* %38)
  %40 = call i32 @jv_object_delete(i32 %34, i32 %39)
  store i32 %40, i32* %4, align 4
  br label %61

41:                                               ; preds = %26
  %42 = load i32, i32* %4, align 4
  %43 = load i8**, i8*** @environ, align 8
  %44 = load i64, i64* %5, align 8
  %45 = getelementptr inbounds i8*, i8** %43, i64 %44
  %46 = load i8*, i8** %45, align 8
  %47 = load i8*, i8** %6, align 8
  %48 = load i8**, i8*** @environ, align 8
  %49 = load i64, i64* %5, align 8
  %50 = getelementptr inbounds i8*, i8** %48, i64 %49
  %51 = load i8*, i8** %50, align 8
  %52 = ptrtoint i8* %47 to i64
  %53 = ptrtoint i8* %51 to i64
  %54 = sub i64 %52, %53
  %55 = trunc i64 %54 to i32
  %56 = call i32 @jv_string_sized(i8* %46, i32 %55)
  %57 = load i8*, i8** %6, align 8
  %58 = getelementptr inbounds i8, i8* %57, i64 1
  %59 = call i32 @jv_string(i8* %58)
  %60 = call i32 @jv_object_set(i32 %42, i32 %56, i32 %59)
  store i32 %60, i32* %4, align 4
  br label %61

61:                                               ; preds = %41, %33
  br label %62

62:                                               ; preds = %61
  %63 = load i64, i64* %5, align 8
  %64 = add i64 %63, 1
  store i64 %64, i64* %5, align 8
  br label %20

65:                                               ; preds = %20
  %66 = load i32, i32* %4, align 4
  %67 = call i32 @jv_copy(i32 %66)
  store i32 %67, i32* %2, align 4
  br label %68

68:                                               ; preds = %65, %17, %10
  %69 = load i32, i32* %2, align 4
  ret i32 %69
}

declare dso_local i64 @jv_is_valid(i32) #1

declare dso_local i32 @jv_copy(i32) #1

declare dso_local i32 @jv_object(...) #1

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i32 @jv_object_delete(i32, i32) #1

declare dso_local i32 @jv_string(i8*) #1

declare dso_local i32 @jv_object_set(i32, i32, i32) #1

declare dso_local i32 @jv_string_sized(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
